[tool.poetry]
name = "synativ"
version = "0.1.0"
description = "Synativ technical test"
authors = ["Charlie Pearce <charliehpearce@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.5.1"
rq = "^1.12.0"
pydantic = "^1.10.5"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportMissingImports = false 